# mini-instagram

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
authentication/: serializers.py  tasks.py  tests.py  urls.py  views.py
common/: paginations.py  permissions.py  serializers.py  utils.py
common/management/commands/: seed_data.py
config/: celery.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_commentlike_options_alter_postlike_options_and_more.py  0004_change_postlike_id_to_bigint.py  0005_alter_post_content_alter_post_title_and_more.py
scripts/: entrypoint.sh
users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_full_name_alter_user_username.py  0003_rename_date_joined_user_created_at_user_updated_at.py
